se agrego mas texto

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>Hola mundo</p>
     <div>
         <h1>Esto es una caja</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum soluta impedit tenetur corporis culpa vero sunt ipsam, repellendus error repellat magni eligendi doloremque iste quos nulla assumenda illum asperiores optio!</p>
     </div>
 </body>
 </html>
